2008-01-11  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/handler.[ch]: added an 'established' arg to getph1byaddr()
	From Krzysztof Oledzki <olel@ans.pl>:
	* src/racoon/isakmp.c: Only search for established ph1 handles in
	  DPD (also reported new getph1byaddr() arg)
	* src/racoon/isakmp_inf.c: added some details to some logs (also
	  reported new getph1byaddr() arg) 
	* src/racoon/crypto_openssl.c: fixed compilation with idea and
	  recent gcc
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: reset iph1->dpd_r_u in the scheduler's
	  callback, to avoid some access to freed memory

2007-11-29  Yvan Vanhullebus  <vanhu@netasq.com>
	From Natanael Copa <natanael.copa@gmail.com>:
	* src/racoon/Makefile.am: fixed a race condition when building
	  yacc stuff.
	
2007-11-06  Yvan Vanhullebus  <vanhu@netasq.com>
	From Scott Lamb <slamb@slamb.org>
	* src/racoon/plog.[ch]: new plog macro
	* src/racoon/kmpstat.c: plog changed to _plog to work with new plog macro
	* src/racoon/crypto_openssl.c: includes plog.h to work with the
	  new plog macro

2007-10-15  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/libipsec/pfkey.c: Try to increase the buffer size of the
	  pfkey socket, this may help things when we have a huge SPD.

2007-09-19  Matthew Grooms <mgrooms@shrew.net>
	From Joy Latten <latten@austin.ibm.com>
	* configure.ac: Fix autoconf check for selinux support.

2007-09-03  Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/racoon.conf.5: Correct wins4 and nbns4 modecfg option syntax.
	* src/racoon/cftoken.l: Add nbns4 as an alias for wins4.

---------------------------------------------

	0.7 released

2007-08-07  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp_xauth.c: Don't mix up RADIUS authentication and
	  authorization ports. Allow interoperability with freeradius

2007-08-01  Yvan Vanhullebus  <vanhu@netasq.com>
	* configure.ac	
	src/libipsec/ipsec_dump_policy.c
	src/libipsec/ipsec_get_policylen.c
	src/libipsec/ipsec_strerror.c